# Consumer_Customer

./: .gitignore  CMakeLists.txt  README.md
include/: head.h
src/: CMakeLists.txt  consumer.cpp  main.cpp  productor.cpp
